# MCNF E12 "Construct" — `mde-voice-egui`: the egui Voice/SIP surface (E12-11).
#
# A standalone eframe surface on the shared `mde-egui` harness that REUSES the
# shipped pure-Rust SIP stack in `mde-voice-hud` — its register/call state
# machine (`sip`), the RTP/G.711 `media` engine, and the dialed-string routing
# helpers — to register an account, place a mesh/registrar call, and answer an
# inbound one. This crate is glue, not reimplementation (§6): no new SIP, no new
# media; it drives the daemon's own state machine and renders it through `Style`.
#
# Tier (§6): desktop-shell. The dependency edges point strictly INWARD —
# desktop → harness (`mde-egui`) and desktop → services (`mde-voice-hud`,
# consumed WITHOUT its Cosmic-era HUD via `default-features = false`); it pulls in
# no mesh-substrate crate, so the substrate stays headless-capable.
[package]
name        = "mde-voice-egui"
description = "MCNF E12 Construct — the egui-native Voice/SIP surface. Reuses mde-voice-hud's shipped pure-Rust SIP register/call state machine (REGISTER + INVITE/ACK/BYE + inbound answer/decline) and RTP/G.711 media engine to register, dial a mesh peer or number, and take an inbound call, rendered through the shared mde-egui Style. The blocking/!Send SIP work runs on worker threads; the render-agnostic view-model is unit-tested without a socket or a sound device."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_voice_egui"
path = "src/lib.rs"

[[bin]]
name = "mde-voice-egui"
path = "src/main.rs"

[dependencies]
# §4/§5 harness — the one inward desktop dependency: run_client (the eframe
# Wayland-client runner), the shared Style, and the re-exported egui/eframe so
# the surface shares one toolkit resolution.
mde-egui = { path = "../../shared/mde-egui" }
# §6 reuse — the voice service crate's render-agnostic core. `default-features =
# false` drops the Cosmic-era HUD (E12 is egui-native); we call its `sip` register/
# call state machine (`SipAccount`, `run_agent`, `place_call`/`place_call_direct`,
# `hang_up`, `AgentEvent`/`AgentCommand`, the routing helpers) and the `media`
# engine — all already tested there.
mde-voice-hud = { path = "../../services/mde-voice-hud", default-features = false }
# §6/§9 — the Fleet tab (VOIP-GW-5) reads the per-node reg-state the mackesd
# `voice_provision` worker (VOIP-GW-3) publishes to `state/voice/*` and publishes
# the typed `action/voice/*` verbs back, over the persist-first Bus path. mde-bus
# is platform-services (rank 2), an INWARD edge from this desktop-shell crate
# (rank 3) — the same path mde-shell-egui/mde-panel-egui already lean on.
mde-bus = { path = "../../platform/mde-bus" }
# The Bus payloads are (de)serialised with LOCAL serde structs (below) rather than
# depending on the mackesd daemon — keeps the tier edge clean (§6).
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# The Fleet-tab poll/publish round-trip test drives a real on-disk Bus spool.
tempfile = "3"

[lints]
workspace = true
