[package]
name        = "mackes-mesh-types"
description = "Shared mesh-resource types — peers, mounted shares, services."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# Portal-18.a (v6.0 R12 lock 2026-05-26) — tag-store JSON
# (de)serialization. Already a dev-dependency; promoted to a
# real dep when the tag store landed since `TagStore::load_from`
# + `TagStore::save_to` are public on the lib surface.
serde_json = "1"
# window-rules TOML (de)serialization. The window-rules module is hosted
# here (not in mackesd) so UI consumers can import the types without
# depending on the heavy mackesd crate. (Originally for mde-portal's Hub
# modal — portal retired E4.20; the shared-types split still stands.)
toml = "0.8"
# Portal-18.a — XDG resolution for the default tag-store path
# (`<XDG_DATA_HOME>/mde/tags.json`).
dirs = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
