[package]
name        = "mackes-nebula-https-tunnel"
description = "NF-1 — TLS 1.3 covert transport that wraps Nebula UDP frames over a long-lived HTTPS-shaped TLS stream (Q4)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mackes_nebula_https_tunnel"
path = "src/lib.rs"

[dependencies]
# NF-1.2 — rustls TLS 1.3. Locked to 0.23 per the design doc.
rustls       = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
# NF-1.2 — async listener + dialer on top of tokio TcpListener /
# TcpStream. Full runtime feature set so the crate works as a
# direct dependency for both binary + library consumers.
tokio = { version = "1", features = ["net", "io-util", "macros", "rt", "sync", "time"] }
# NF-1.3 — framing layer reuses BytesMut for zero-copy buffer
# management. Pinned to whatever the workspace already uses.
bytes = "1"
# Structured tracing for cross-correlation with mackesd logs.
tracing = "0.1"
# Error propagation — same pattern as the rest of the
# workspace's network code.
thiserror = "1"
# NF-4.5 (v2.5, 2026-05-24) — From-impl bridges between this
# crate's `activation::HttpsFallbackState` and the transport
# crate's `peer_path::HttpsFallbackState`. The impls have to
# live in this crate (or in mackes-transport) per Rust's
# orphan rule; this crate is the more natural home since
# `activation::HttpsFallbackState` is the canonical enum the
# state machine works on. mackes-transport has no workspace
# deps so no dependency cycle.
mackes-transport = { path = "../mackes-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
